Finish CRUD function
